tests/requests/snapshots/auth/can_get_current_user@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 195
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":\"ID\",\"email\":\"john.doe@acme.com\",\"username\":\"john_doe\",\"imageUrl\":null,\"verified\":true,\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}",
)
