tests/requests/snapshots/auth/can_set_reset_token_when_user_exists@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 149
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"message\":\"An email with a password reset link has been sent to your email inbox.\"}",
)
