tests/requests/snapshots/auth/can_successfully_login_user@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 155
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    200,
    {
        "authorization": "JWT",
        "set-cookie": "access_token=JWT; SameSite=Lax; Path=/; Max-Age=900",
        "set-cookie": "refresh_token=JWT; HttpOnly; SameSite=Lax; Path=/; Max-Age=604800",
        "content-length": "NUMBER",
    },
    "{\"token\":\"JWT\",\"user\":{\"createdAt\":\"DATEZ\",\"email\":\"john.doe@acme.com\",\"id\":\"ID\",\"imageUrl\":null,\"updatedAt\":\"DATEZ\",\"username\":\"john_doe\",\"verified\":true}}",
)
