tests/requests/snapshots/auth/can_verify_user@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 239
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":\"ID\",\"email\":\"test1@example.com\",\"username\":\"test_user1\",\"imageUrl\":null,\"verified\":true,\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}",
)
