tests/requests/snapshots/auth/when_email_is_not_an_email_registration_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 71
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"{\\\"email\\\":\\\"Invalid email address\\\"}\"}",
)
