tests/requests/snapshots/auth/when_password_contains_comma_char_registration_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 107
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"{\\\"password\\\":\\\"password cannot have commas\\\"}\"}",
)
