tests/requests/snapshots/auth/when_password_is_too_short_login_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    422,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"password\":\"Password must be atleast 8 characters long\"}}",
)
