tests/requests/snapshots/auth/when_password_is_under_eight_chars_registration_fails@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 62
expression: "(response.status_code(), response.text())"
---
(
    422,
    "{\"error\":\"{\\\"password\\\":\\\"password requires 8 characters\\\"}\"}",
)
